# rules_docgen

./: .bazelrc  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  README.bazel.md  digest.json  example.md  index.js  package.json  pnpm-lock.yaml  query.binpb  tar.md
.aspect/cli/: config.yaml
docgen/starlark/: BUILD.bazel  defs.bzl  fs.mts  handlebars.mts  handlebars.ts  index.mts  index.ts  tsconfig.json
docgen/starlark/templates/: BUILD.bazel  module.md
example/: BUILD.bazel  defs.bzl  defs.md
